package com.enhui.design.state;

/**
 * 抽象状态-心情
 * @Author 胡恩会
 * @Date 2020/6/27 21:02
 **/
public abstract class MoodState {
    abstract void say();
}
